--- a/less/common.less
+++ b/less/common.less
@@ -697,6 +697,9 @@ section{
 		&:hover{
 			box-shadow: 0px 5px 4px 0px #f26529;
 		}
+		&:focus{
+			box-shadow: 0px 5px 4px 0px #f26529;
+		}	
 	}
 	&.fin-white{
 		.GLOBAL_FONT_STYLE('Roboto-Bold',@flamingoapprox,normal);
