--- a/less/widgets.less
+++ b/less/widgets.less
@@ -346,11 +346,24 @@
 		width:74%;
 	}
 }
+.picker .prevYear,
+.picker .nextYear{
+	position: absolute;
+	img{
+		width: 39%;
+	}
+}
 .picker .prev{
-	left:18px!important;
+	left:43px!important;
 }
 .picker .next{
-	right:18px!important;
+	right:43px!important;
+}
+.picker .nextYear{
+	right:20px !important;
+}
+.picker .prevYear{
+	left: 18px !important;
 }
 .picker table th{
 	text-align:center;
