--- a/app/modules/goals/views/goal.html
+++ b/app/modules/goals/views/goal.html
@@ -89,6 +89,18 @@
 				</div>
 				<h2>Others</h2>
 			</div>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('jewellery')>
+				<div class="goals-cover">
+					<div class="image-div">
+						<img src="assets/images/luxurious.png">
+					</div>
+					<div class="checkbox-cover" ng-if="$root.goalAnswered['jewellery']">
+						<input type="radio" name>
+						<label><span></span></label>
+					</div>
+				</div>
+				<h2>Jewellery</h2>
+			</div>
 		</div>
 	</div>
 	<div class="col-xs-12 bottom-desc">
