Make investor registration workflow work with signature and video selfie

--- a/app/modules/registerinvestor/views/completeVideoSelfie.html
+++ b/app/modules/registerinvestor/views/completeVideoSelfie.html
@@ -1,6 +1,5 @@
 <section class="swiper-outer-cover">
-	<swiper swiper-name="videoSelfie" controller-name="registerInvestorController" indicator-end="Video Selfie"></swiper>
-</section>
+	<swiper swiper-name="videoSelfie" controller-name="registerSelfieController" indicator-end="Video Selfie"></swiper>
 <div class="modal fade fade-scale" id="videoCapptureModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -11,11 +10,11 @@
         <div class="fin-btn-group">
         <video style="display:none" id="outputVideo"></video>
         <div id="outputImage"></div>
-          <button class="fin-app-btn fin-skip-btn pull-left" ng-click="clear()">SAVE RECORDED VIDEO</button>
-          <button class="fin-app-btn fin-orange pull-right" ng-click="done()" upload-file="uploadVideo">UPLOAD FROM GALLERY</button>
+          <button class="fin-app-btn fin-skip-btn pull-left" upload-file="uploadVideo">UPLOAD FROM GALLERY</button>
+          <button class="fin-app-btn fin-orange pull-right" ng-click="done()">DONE</button>
         </div>        
         </div>
       </div>
     </div>
-  </div>
+</div>
 </section>
