--- a/app/modules/registerinvestor/views/registerInvestorConfirmation.html
+++ b/app/modules/registerinvestor/views/registerInvestorConfirmation.html
@@ -13,6 +13,10 @@
                       <div class="image-div">
                           <img src="assets/images/investorregistration_sign.png">
                       </div>
+                      <div ng-if="modelVal.signature" class="imageThumbnail">
+                            <img width="100%" ng-src="{{modelVal.signature}}">
+                      </div>
+                      
                       <p class="text-center">Sign</p>
                     </div>
                   </div>
@@ -22,13 +26,13 @@
                   <div class="col-xs-12">
                   <p>
                     <div class="checkbox-cover">
-                        <input type="checkbox" required id="option1Type1" name="option1" ng-model="modelVal.A8" value="op1">
+                        <input type="checkbox" required id="option1Type1" name="option1" ng-model="modelVal.isDeclaration" value="op1">
                         <label for="option1Type1"><span></span>I certify that all information provided for registration is true.</label>
                     </div>
                   </p>
                   <p>
                     <div class="checkbox-cover">
-                        <input type="checkbox" required id="option1Type2" name="option1" ng-model="modelVal.A9" value="op1">
+                        <input type="checkbox" required id="option1Type2" name="option1" ng-model="modelVal.isTerms" value="op1">
                         <label class="" for="option1Type2">
                           <div class="pull-left checkbox-width">
                             <span></span>
@@ -61,7 +65,7 @@
     <div class="col-xs-12">
         <div class="fin-btn-group">
             <button class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>REVIEW INFO</button>
-            <button ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+            <button ng-click="appendValues(modelVal);(step = step + 1);saveInfo()" ng-disabled="!modelVal.signature || !modelVal.isTerms || !modelVal.isDeclaration" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         </div>
     </div>
 
