--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -2589,6 +2589,33 @@
         
     </div>
 </div>
+<div ng-if="swiperName == 'registrationComplete'" class="fadeIn swiper-container customSwiper registrationComplete type2Sliders" ng-init="step = 1">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide">
+            <form name="retirementForm1" novalidate>
+                <div class="swiper-content">
+                    <div class="col-xs-2">
+                        <img class="img img-responsive" src="assets/images/investorregistration_confirmed_thumbs.png" />
+                    </div>
+                    <div class="col-xs-12">
+                    <p>
+                        <h2 class="slider-description">You are now ready to invest!</h2>
+                    </p>
+                  </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="typeSwiper">
+        <div class="image-backdrop"><img src="assets/images/investerRegistration.png"></div>
+        <p>Registration Complete</p>
+    </div>    
+    <div class="fin-btn-group gotoPages">
+        <button class="fin-link-btn content-prev" ng-show="(step == 1)" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>DO IT LATER</button>
+        <button ng-show="(step == 1)" click-redirect="{{redirectUrl}}" class="fin-app-btn fin-orange content-next">CONTINUE TO DASHBOARD</button>
+    </div>
+</div>
+
 <div ng-if="swiperName == 'videoSelfie'" class="fadeIn swiper-container customSwiper videoSelfie type2Sliders" ng-init="step = 1">
     <div class="swiper-wrapper">
         <div class="swiper-slide">
@@ -2638,8 +2665,8 @@
     </div>    
     <div class="fin-btn-group gotoPages">
         <button class="fin-link-btn content-prev" ng-show="(step == 1)" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>DO IT LATER</button>
-        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 2)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE TO DASHBOARD</button>
+        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);(step = step + 1);saveInfo()" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 2)" ng-click="appendValues(modelVal)" click-redirect="/dashboard" class="fin-app-btn fin-orange content-next">CONTINUE TO DASHBOARD</button>
     </div>
 </div>
 
